Bug 389311 - Missing disk quota icon in system tray settings
Summary: Missing disk quota icon in system tray settings
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Icons (other bugs)
Version First Reported In: 5.13.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: visual-bugs-null
URL:
Keywords:
: 363436 (view as bug list)
Depends on:
Blocks: 363436
  Show dependency treegraph
 
Reported: 2018-01-22 11:56 UTC by Harald Sitter
Modified: 2019-06-21 15:09 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
what the config dialog looks like with the icon we have (47.92 KB, image/png)
2018-01-22 11:57 UTC, Harald Sitter
Details
the icon we use for the systray (8.69 KB, image/svg+xml)
2018-01-22 11:57 UTC, Harald Sitter
Details
icon in systray (12.98 KB, image/png)
2018-01-22 11:58 UTC, Harald Sitter
Details
screenshot taken on Arch, plasma 5.14 beta (101.17 KB, image/png)
2018-09-17 13:12 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2018-01-22 11:56:25 UTC
the disk quota plasma applet currently has no icon listed in the system tray config because breeze doesn't contain the icon.

Please add apps/quota-disk.svg to breeze-icons. We already have an SVG used for the system tray icon itself, I do not know if this is appropriate for use in the configuration dialog though.
Comment 1 Harald Sitter 2018-01-22 11:57:10 UTC
Created attachment 110047 [details]
what the config dialog looks like with the icon we have
Comment 2 Harald Sitter 2018-01-22 11:57:31 UTC
Created attachment 110048 [details]
the icon we use for the systray
Comment 3 Harald Sitter 2018-01-22 11:58:05 UTC
Created attachment 110049 [details]
icon in systray
Comment 4 Dominik Haumann 2018-02-20 10:34:57 UTC
*** Bug 363436 has been marked as a duplicate of this bug. ***
Comment 5 Dominik Haumann 2018-02-20 10:35:33 UTC
All it takes is to push this to git. Who is the contact person to make this happen?
Comment 6 Patrick Silva 2018-02-20 12:08:32 UTC
disk quota icon is also missing in widgets explorer.
Comment 7 uRohan 2018-03-11 22:45:06 UTC
OS: openSUSE Tumbleweed 20180309
KDE Plasma Version: 5.12.3
KDE Frameworks Version: 5.43.0
Qt Version: 5.10.0

Disk Quota icon still missed in System Tray Settings.
Comment 8 Patrick Silva 2018-05-20 14:36:53 UTC
bug persists in plasma 5.13 beta, frameworks 5.46, Arch Linux.
Comment 9 Patrick Silva 2018-09-17 13:11:26 UTC
Disk quota icon is still missing in system tray settings, both breeze and breeze dark themes are affected.

Arch Linux
Plasma 5.14 beta
Frameworks 5.50
Comment 10 Patrick Silva 2018-09-17 13:12:14 UTC
Created attachment 115039 [details]
screenshot taken on Arch, plasma 5.14 beta