[quota] Use new breeze icons

Summary:
Shipping an icon ourself is causing trouble. Use the new Breeze icons from D21957.

BUG: 389311

Reviewers: #plasma, ngraham, ndavis

Reviewed By: ngraham, ndavis

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21958